[op]: Added .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,28 @@
-RABBITMQ_HOST=rabbitmq
+# SIMULATION CONFIGURATIONS
+SIMULATION_RUN_DURATION=           # in s 
+
+# RABBITMQ CONFIGURATIONS
+RABBITMQ_HOST=
 RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 RABBITMQ_PORT=
 
-TASK_CPU_LOAD=
-TASK_DISK_LOAD=
-TASK_MEMORY_LOAD=
-TASK_BANDWIDTH_LOAD=
-TASK_EXECUTION_TIME=
+# REDIS CONFIGURATIONS
+REDIS_ADDRESS=
+REDIS_PASSWORD=
+
+# TASK CONFIGURATIONS
+TASK_CPU_LOAD=                      # in %
+TASK_DISK_LOAD=                     # in MBs
+TASK_MEMORY_LOAD=                   # in MBs
+TASK_EXECUTION_TIME=                # in ms
 
 TASK_GENERATION_INTERVAL=
+
+# SERVER CONFIGURATIONS
+INITIAL_CPU_UTILIZATION=
+CPU_LIMIT=                          # in %
+INITIAL_MEMORY_UTILIZATION=
+MEMORY_LIMIT=                       # in MBs
+INITIAL_DISK_UTILIZATION=
+DISK_LIMIT=                         # in MBs
